# textworks-python

./: README.md  dev.sh  pyproject.toml
tests/: test.py
textworks/: __init__.py
